# SimArch

./: CMakeLists.txt  alu.c  alu.h  cache.h  constants.h  cpu.h  memory.h  pipeline.c
docs/: Initial.md  add_alu.md
src/: alu.c  alu.h  cache.c  constants.h  cpu.c  cpu.h  main.c  memory.c  pipeline.h
test/alu/: alu_test.c  alu_test.h
